fix generator: fields from json

--- a/Resources/skeleton/bundle/Entity.php.twig
+++ b/Resources/skeleton/bundle/Entity.php.twig
@@ -47,7 +47,7 @@ class {{ bundle_basename }} {
     /**
     * @var {{ field.varType }}
     *
-    * @ORM\Column(name="{{ field.name }}", type="{{ field.ormType }}", nullable={{ field.nullable }})
+    * @ORM\Column(name="{{ field.name }}", type="{{ field.ormType }}", nullable={{ field.nullable?'true':'false' }})
     * @Groups({"get{{ bundle_basename }}"})
     */
     protected ${{ field.name }};
